--- a/_posts/2016-09-21-notes.md
+++ b/_posts/2016-09-21-notes.md
@@ -1,187 +1,21 @@
 ---
-title: "Notes"
+title: " Notes"
 ---
 
-<nav class="toc" markdown="1">
-*   
-{:toc}
-</nav>
 <hr>
-
-#### Prof. XYZ
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
 
 <hr>
 
-#### Prof. efg
 
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
+<a href="{{ site.baseurl }}/1">1st Year</a>
+<a href="{{ site.baseurl }}/3">3rd Semester</a>
+<a href="{{ site.baseurl }}/4">4th Semester</a>
+<a href="{{ site.baseurl }}/5">5th Semester</a>
+<a href="{{ site.baseurl }}/6">6th Semester</a>
+<a href="{{ site.baseurl }}/7">7th Semester</a>
+<a href="{{ site.baseurl }}/8">8th Semester</a>
 
 <hr>
 
-#### Prof. bcd
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
 <hr>
 
-#### Prof. yza
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. vwx
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. stu
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. pqr
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. mno
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. jkl
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. ghi
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. def
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
-
-<hr>
-
-#### Prof. abc
-
-<i>Digital Signal Processing</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [ 1,2,3 ].  
-Please refer prescribed text book for problems
-
-<i>Field Theory</i>
-
-* [Part - 1](/assets/test.pdf)  
-Includes unit - [1,2].
