--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -16,13 +16,14 @@ title: "3 SEM Notes"
 
 <hr>
 
+ ANALOG ELECTRONICS LABORATORY
 
- ###### ANALOG ELECTRONICS LABORATORY
 
-
- ###### DIGITAL ELECTRONICS LABORATORY
+ DIGITAL ELECTRONICS LABORATORY
 
 <hr>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
 
