--- a/_posts/2016-10-06-4.md
+++ b/_posts/2016-10-06-4.md
@@ -2,106 +2,42 @@
 title: "4 SEM Notes"
 ---
 
+
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
 
 <hr>
 
-
 <nav class="toc" markdown="1">
 *   
 {:toc}
 </nav>
+
 <hr>
 
+ 1 LABORATORY
 
 
+ 2 LABORATORY
 
+<hr>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
 
 
+###### SUB1
+
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
 
- # <i>S1</i>
+###### SUB2
 
 * Module 1
 * Module 2 
@@ -109,18 +45,7 @@ title: "4 SEM Notes"
 * Module 4 
 * Module 5
 
-
-
-
-
-
-
-
-
-
-
-
- # <i>S2</i>
+###### SUB3
 
 * Module 1
 * Module 2 
@@ -128,26 +53,7 @@ title: "4 SEM Notes"
 * Module 4 
 * Module 5
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- # <i>S3</i>
+###### SUB4
 
 * Module 1
 * Module 2 
@@ -155,28 +61,7 @@ title: "4 SEM Notes"
 * Module 4 
 * Module 5
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- # <i>S4</i>
+###### SUB1
 
 * Module 1
 * Module 2 
@@ -184,28 +69,7 @@ title: "4 SEM Notes"
 * Module 4 
 * Module 5
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- # <i>S5</i>
+###### SUB5
 
 * Module 1
 * Module 2 
@@ -213,53 +77,5 @@ title: "4 SEM Notes"
 * Module 4 
 * Module 5
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- # <i>S6</i>
-
-* Module 1
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<hr>
-
-
-# <i>LABORATORY 1</i>
-
-
-# <i>LABORATORY 2</i>
 
 <hr>
