--- a/_posts/2016-10-06-8.md
+++ b/_posts/2016-10-06-8.md
@@ -1,95 +1,31 @@
 ---
-title: "Notea"
+title: "6 SEM Notes"
 ---
+
+
+<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
+
+<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
+
+<hr>
 
 <nav class="toc" markdown="1">
 *   
 {:toc}
 </nav>
-<hr>
-
-<div>
-
-
-#### 3 SEM
-
-
-<a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
-
-<a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
 
 <hr>
 
 
-<i>ANALOG ELECTRONICS</i>
+<hr>
 
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-
-<i>DIGITAL ELECTRONICS </i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>NETWORK ANALYSIS </i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>ELECTRONIC INSTRUMENTATION </i>
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>ENGINEERING ELECTROMAGNETICS </i>
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 <hr>
 
 
-<i>ANALOG ELECTRONICS LABORATORY</i>
-
-
-<i>DIGITAL ELECTRONICS LABORATORY</i>
-
-
-
-
-</div>
-
-<hr>
-
-<div>
-
-#### 5 SEM
-
-<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
-
-<hr>
-
-
-<i>MANAGEMENT & ENTREPRENEURSHIP</i>
+###### WIRELESS COMMUNICATION 
 
  Part A
 
@@ -103,121 +39,10 @@ title: "Notea"
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>DIGITAL SIGNAL PROCESSING</i>
-
- Part A
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>ANALOG COMMUNICATION</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>MICROWAVES AND RADAR </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>INFORMATION THEORY AND CODING </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>FUNDAMENTALS OF CMOS VLSI</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<hr>
-
-
-<i>Lab Manual</i>
-
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">DIGITAL SIGNAL PROCESSING LABORATORY</a>  
-
-ANALOG COMMUNICATION LAB + LIC LAB
-
-
-</div>
-
-<hr>
-
-<div>
-
-#### 7 SEM
-
-<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
-
-<hr>
-
-
-<i> COMPUTER COMMUNICATION NETWORKS</i>
+###### DIGITAL SWITCHING SYSTEMS 
 
  Part A
 
@@ -231,10 +56,10 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>OPTICAL FIBER COMMUNICATION</i>
+###### DISTRIBUTED SYSTEM 
 
  Part A
 
@@ -248,14 +73,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>POWER ELECTRONICS </i>
+######  NETWORK SECURITY 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -265,14 +90,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>EMBEDED SYSTEM DESIGN </i>
+###### OPTICAL NETWORKS 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -282,14 +107,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>DSP ALGORITHMS AND ARCHITECTURE </i>
+###### HIGH PERFORMANCE COMPUTER NETWORKS   
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -299,14 +124,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
+* Unit 9  
 
-
-<i>MICRO AND SMART SYSTEMS TECHNOLOGY</i>
+###### INTERNET ENGINEERING 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -316,14 +141,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>ARTIFICIAL NEURAL NETWORKS</i>
+###### MULTIMEDIA COMMUNICATIONS 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -333,15 +158,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-
-<i>CAD FOR VLSI</i>
+###### REAL TIME OPERATING SYSTEMS  
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* Unit 1
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -351,14 +175,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>APPLIED EMBEDDED SYSTEM DESIGN </i>
+###### GSM  
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* Unit 1
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -368,20 +192,44 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
+
+
+###### ADHOC WIRELESS NETWORKS 
+
+ Part A
+
+* Unit 1 
+* Unit 2
+* Unit 3  
+* Unit 4 
+
+ Part B
+  
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8  
+
+
+
+###### OPTICAL COMPUTING 
+
+ Part A
+
+* Unit 1 
+* Unit 2
+* Unit 3  
+* Unit 4 
+
+ Part B
+  
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8  
+
+
 
 
 <hr>
-
-
-<i>Lab Manual</i>
-
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c"> VLSI LAB</a>  
-
-POWER ELECTRONICS LAB
-
-</div>
-
-<hr>
-
