--- a/_posts/2016-10-06-6.md
+++ b/_posts/2016-10-06-6.md
@@ -1,95 +1,35 @@
 ---
-title: "Notea"
+title: "6 SEM Notes"
 ---
+
+
+<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
+
+<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
+
+<hr>
 
 <nav class="toc" markdown="1">
 *   
 {:toc}
 </nav>
-<hr>
-
-<div>
-
-
-#### 3 SEM
-
-
-<a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
-
-<a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
 
 <hr>
 
-
-<i>ANALOG ELECTRONICS</i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
+ ADVANCED COMMUNICATION LAB 
 
 
-<i>DIGITAL ELECTRONICS </i>
+ MICROPROCESSOR LAB 
 
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
+<hr>
 
-<i>NETWORK ANALYSIS </i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>ELECTRONIC INSTRUMENTATION </i>
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>ENGINEERING ELECTROMAGNETICS </i>
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 <hr>
 
 
-<i>ANALOG ELECTRONICS LABORATORY</i>
-
-
-<i>DIGITAL ELECTRONICS LABORATORY</i>
-
-
-
-
-</div>
-
-<hr>
-
-<div>
-
-#### 5 SEM
-
-<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
-
-<hr>
-
-
-<i>MANAGEMENT & ENTREPRENEURSHIP</i>
+###### DIGITAL COMMUNICATION
 
  Part A
 
@@ -103,121 +43,10 @@ title: "Notea"
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>DIGITAL SIGNAL PROCESSING</i>
-
- Part A
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>ANALOG COMMUNICATION</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>MICROWAVES AND RADAR </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>INFORMATION THEORY AND CODING </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>FUNDAMENTALS OF CMOS VLSI</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<hr>
-
-
-<i>Lab Manual</i>
-
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">DIGITAL SIGNAL PROCESSING LABORATORY</a>  
-
-ANALOG COMMUNICATION LAB + LIC LAB
-
-
-</div>
-
-<hr>
-
-<div>
-
-#### 7 SEM
-
-<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
-
-<hr>
-
-
-<i> COMPUTER COMMUNICATION NETWORKS</i>
+###### MICROPROCESSOR 
 
  Part A
 
@@ -231,10 +60,10 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>OPTICAL FIBER COMMUNICATION</i>
+###### MICROELECTRONICS CIRCUITS
 
  Part A
 
@@ -248,14 +77,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>POWER ELECTRONICS </i>
+###### ANTENNAS AND PROPAGATION 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -265,14 +94,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>EMBEDED SYSTEM DESIGN </i>
+###### OPERATING SYSTEMS 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -282,14 +111,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>DSP ALGORITHMS AND ARCHITECTURE </i>
+###### ANALOG AND MIXED MODE VLSI DESIGN 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -299,14 +128,13 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
-
-<i>MICRO AND SMART SYSTEMS TECHNOLOGY</i>
+###### SATELLITE COMMUNICATION
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -316,14 +144,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>ARTIFICIAL NEURAL NETWORKS</i>
+###### RANDOM PROCESSES 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -333,15 +161,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-
-<i>CAD FOR VLSI</i>
+###### LOW POWER VLSI DESIGN
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -351,14 +178,14 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
 
 
-<i>APPLIED EMBEDDED SYSTEM DESIGN </i>
+###### DATA STRUCTURE USING C++ 
 
  Part A
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -368,20 +195,25 @@ ANALOG COMMUNICATION LAB + LIC LAB
 * Unit 5  
 * Unit 6   
 * Unit 7 
-* Unit 8   
+* Unit 8  
+
+
+###### DIGITAL SYSTEMS DESIGN USING VERILOG
+
+ Part A
+
+* Unit 1 
+* Unit 2
+* Unit 3  
+* Unit 4 
+
+ Part B
+  
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8  
+
 
 
 <hr>
-
-
-<i>Lab Manual</i>
-
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c"> VLSI LAB</a>  
-
-POWER ELECTRONICS LAB
-
-</div>
-
-<hr>
-
