--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -3,6 +3,7 @@ title: "3 SEM Notes"
 ---
 
 
+<h2 id="top"></h2>
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
@@ -12,6 +13,8 @@ title: "3 SEM Notes"
 <nav class="toc" markdown="1">
 *   
 {:toc}
+
+<a href="#top">Go to top</a>
 </nav>
 
 <hr>
