--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -3,7 +3,7 @@ title: "3 SEM Notes"
 ---
 
 
-<h2 id="top"></h2>
+<h2 id="top">1</h2>
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
