--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -1,9 +1,9 @@
 ---
-title: "3 SEM Notes"
+title: "3 SEM Notess"
 ---
 
 
-<h2 id="top">1</h2>
+<h2 id="top"></h2>
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
@@ -14,7 +14,7 @@ title: "3 SEM Notes"
 *   
 {:toc}
 
-<a href="#top">Go to top</a>
+
 </nav>
 
 <hr>
