--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -15,6 +15,7 @@ title: "3 SEM Notess"
 {:toc}
 
 
+
 </nav>
 
 <hr>
@@ -39,6 +40,7 @@ title: "3 SEM Notess"
 * Module 4 
 * Module 5
 
+<a href="#top">Go to top</a>
 
 ###### DIGITAL ELECTRONICS
 
