--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -1,10 +1,9 @@
 <h6 id="top"></h6>
+
 ---
-title: "3 SEM Notes"
+title: "3 SEM Notess"
 ---
 
-
-<h2 id="top"></h2>
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
