--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -1,7 +1,5 @@
-<h6 id="top"></h6>
-
 ---
-title: "3 SEM Notess"
+title: "3 SEM Notes"
 ---
 
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
@@ -13,8 +11,6 @@ title: "3 SEM Notess"
 <nav class="toc" markdown="1">
 *   
 {:toc}
-
-
 
 </nav>
 
@@ -40,7 +36,7 @@ title: "3 SEM Notess"
 * Module 4 
 * Module 5
 
-<a href="#top">Go to top</a>
+<a href="#">Go to top</a>
 
 ###### DIGITAL ELECTRONICS
 
