--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -1,5 +1,5 @@
 ---
-title: "3 SEM Notes"
+title: "3 SEM Notess"
 ---
 
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
