--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -1,5 +1,5 @@
 ---
-title: "3 SEM Notes"
+title: "3 SEM Notess"
 ---
 
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
@@ -10,7 +10,11 @@ title: "3 SEM Notes"
 
 <nav class="toc" markdown="1">
 *   
-{:toc}
+{:toc
+<br>
+
+<a href="#">Go to top</a>
+}
 
 </nav>
 
@@ -36,7 +40,6 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-<a href="#">Go to top</a>
 
 ###### DIGITAL ELECTRONICS
 
