--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -13,7 +13,6 @@ title: "3 SEM Notess"
 {:toc
 <br>
 
-<a href="#">Go to top</a>
 }
 
 </nav>
@@ -40,6 +39,9 @@ title: "3 SEM Notess"
 * Module 4 
 * Module 5
 
+<a href="#">
+  <img src="top.png" style="width:42px;height:42px;border:0">
+</a>
 
 ###### DIGITAL ELECTRONICS
 
