--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -40,7 +40,7 @@ title: "3 SEM Notes"
 * Module 5
 
 <a href="#">
-  <img src="{{ site.baseurl }}/top.png" style="border:0">
+  <img src="top.png" style="border:0">
 </a>
 
 ###### DIGITAL ELECTRONICS
