--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -10,10 +10,7 @@ title: "3 SEM Notes"
 
 <nav class="toc" markdown="1">
 *   
-{:toc
-<br>
-
-}
+{:toc}
 
 </nav>
 
@@ -39,9 +36,7 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-<a href="#">
-  <img src="top.png" style="border:0">
-</a>
+<a href="#">Top</a>
 
 ###### DIGITAL ELECTRONICS
 
@@ -51,6 +46,8 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
+<a href="#">Top</a>
+
 ###### NETWORK ANALYSIS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
@@ -58,6 +55,8 @@ title: "3 SEM Notes"
 * Module 3  
 * Module 4 
 * Module 5
+
+<a href="#">Top</a>
 
 ###### ELECTRONIC INSTRUMENTATION
 
@@ -67,6 +66,8 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
+<a href="#">Top</a>
+
 ###### ENGINEERING ELECTROMAGNETICS
 
 * <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
@@ -74,6 +75,8 @@ title: "3 SEM Notes"
 * Module 3  
 * Module 4 
 * Module 5
+
+<a href="#">Top</a>
 
 
 <hr>
