--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -37,7 +37,7 @@ title: "3 SEM Notes"
 * Module 5
 
 <a href="#">
-  <img src="https://yogugithub.github.io/TestGithub/assets/top.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+  <img src="/assets/top.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
 </a>
 
 ###### DIGITAL ELECTRONICS
@@ -48,7 +48,9 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-<a href="#">Top</a>
+<a href="#">
+  <img src="https://yogugithub.github.io/TestGithub/assets/top.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+</a>
 
 ###### NETWORK ANALYSIS
 
