--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -23,7 +23,6 @@ title: "3 SEM Notes"
 
 <hr>
 
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 <hr>
 
@@ -37,8 +36,9 @@ title: "3 SEM Notes"
 * Module 5
 
 <a href="#">
-  <img src="/assets/top.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+  <img src="https://ecernsit.github.io/assets/top.png" style="float: right;" style="width:42px;height:42px;border:0;">
 </a>
+
 
 ###### DIGITAL ELECTRONICS
 
@@ -49,7 +49,7 @@ title: "3 SEM Notes"
 * Module 5
 
 <a href="#">
-  <img src="https://yogugithub.github.io/TestGithub/assets/top.png" alt="HTML tutorial" style="width:42px;height:42px;border:0;">
+  <img src="https://ecernsit.github.io/assets/top.png" style="float: right;" style="width:42px;height:42px;border:0;">
 </a>
 
 ###### NETWORK ANALYSIS
@@ -60,9 +60,13 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-<a href="#">Top</a>
+<a href="#">
+  <img src="https://ecernsit.github.io/assets/top.png" style="float: right;" style="width:42px;height:42px;border:0;">
+</a>
 
-###### ELECTRONIC INSTRUMENTATION
+
+###### ELECTRONIC INSTRUMENTATIO
+
 
 * <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -70,7 +74,10 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-<a href="#">Top</a>
+<a href="#">
+  <img src="https://ecernsit.github.io/assets/top.png" style="float: right;" style="width:42px;height:42px;border:0;">
+</a>
+
 
 ###### ENGINEERING ELECTROMAGNETICS
 
@@ -80,7 +87,8 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-<a href="#">Top</a>
-
+<a href="#">
+  <img src="https://ecernsit.github.io/assets/top.png" style="float: right;" style="width:42px;height:42px;border:0;">
+</a>
 
 <hr>
